# Godsaeng-Backend

./: .env  .env.template  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
db/: docker-compose.yml  init.sql
migrations/: 20230204082932_create_userInfo_table.sql  20230204083035_insert_admin_to_userInfo.sql  20230204083105_create_event_table.sql
scripts/: init_db.sh  init_redis.sh
src/: events.rs  lib.rs  main.rs  runner.rs  services.rs  users.rs
src/routes/: events.rs  users.rs
tests/: event_check.rs  helper.rs  user_check.rs
